--- a/package.json
+++ b/package.json
@@ -8,20 +8,25 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy":"npm run build && cdk deploy"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.68.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.68.0",
+    "aws-sdk": "^2.773.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.68.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda": "^1.68.0",
+    "@aws-cdk/aws-s3": "^1.68.0",
     "@aws-cdk/core": "1.68.0",
+    "firebase-admin": "^9.2.0",
     "source-map-support": "^0.5.16"
   }
 }
