--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^9.2.0"
+    "firebase-admin": "^9.2.0",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.4"
   }
 }
