--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@aws-cdk/aws-lambda": "^1.68.0",
     "@aws-cdk/aws-s3": "^1.68.0",
     "@aws-cdk/core": "1.68.0",
+    "@types/aws-lambda": "^8.10.64",
+    "aws-lambda": "^1.0.6",
     "firebase-admin": "^9.2.0",
     "source-map-support": "^0.5.16"
   }
