--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,8 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^9.2.0",
-    "uuid": "^8.3.1",
-    "uuidv4": "^6.2.4"
+    "@types/uuid": "^8.3.0",
+    "uuid": "^8.3.1"
   }
 }
